# fileio

./: CMakeLists.txt  README.md
documents/: 内部構造.drawio
example/: example.cpp
src/: fileio_json.hpp  type_traits.hpp
src/json/: fileio_input_json.cpp  fileio_json_input_archive.hpp  fileio_output_json.cpp
