cmake_minimum_required(VERSION 3.10)
project(fileio)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INCLUDE_CURRENT_DIR OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(cmake/dirlist.cmake)

ADD_FILES("${PROJECT_SOURCE_DIR}/src" "hpp" HEADER_FILES)
ADD_FILES("${PROJECT_SOURCE_DIR}/src" "cpp" SOURCE_FILES)
ADD_FILE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src" "hpp" HEADER_DIRS)

ADD_FILES("${PROJECT_SOURCE_DIR}/external" "c" SOURCE_FILES)
ADD_FILES("${PROJECT_SOURCE_DIR}/external" "h" HEADER_FILES)
ADD_FILE_DIRECTORIES("${PROJECT_SOURCE_DIR}/external" "h" HEADER_DIRS)

ADD_FILES("${PROJECT_SOURCE_DIR}/example" "hpp" HEADER_FILES)
ADD_FILES("${PROJECT_SOURCE_DIR}/example" "cpp" SOURCE_FILES)
ADD_FILE_DIRECTORIES("${PROJECT_SOURCE_DIR}/example" "hpp" HEADER_DIRS)


include_directories(${HEADER_DIRS})
add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
target_compile_options(${PROJECT_NAME} PUBLIC -O0 -g -Wall)

